--- a/craft/templates/_layout--main.html
+++ b/craft/templates/_layout--main.html
@@ -9,7 +9,10 @@
         <title>{{ siteName }}</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="{{ craft.config.environmentVariables.siteUrl }}resources/﻿sass/style-compiled.css">
+        <link rel="stylesheet" type="text/css"
+      href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+        <link rel="stylesheet" href="{{ craft.config.environmentVariables.siteUrl }}/resources/style-compiled.css">
+
     </head>
     <body>
         <!--[if lt IE 7]>
