--- a/resources/sass/style.sass
+++ b/resources/sass/style.sass
@@ -1,6 +1,6 @@
 //PLUGINS
 @import "normalize-scss/normalize"
-@import "font-awesome/scss/font-awesome"
+//@import "font-awesome/scss/font-awesome"
 
 //FRAMEWORKS & GRIDS
 @import "bourbon/bourbon"
